# meshnet-audio

./: VS1053_INTEGRATION_SUMMARY.md  extra_script.py  platformio.ini  sdkconfig.rx.defaults  sdkconfig.s3-rx  sdkconfig.s3-tx  sdkconfig.tx.defaults
docs/: VS1053_ADAFRUIT_ISSUE.md  VS1053_MIGRATION_PLAN.md  WIRING_GUIDE.md
lib/audio/: CMakeLists.txt  library.json  rx_pipeline.c  rx_pipeline.h  tx_pipeline.c  tx_pipeline.h
lib/audio/include/: packet.h
lib/audio/src/: vs1053_adafruit_adapter.cpp
lib/audio/vs1053/: vs1053.c  vs1053.h  vs1053_regs.h
lib/config/include/config/: build.h  pins.h
lib/control/: CMakeLists.txt
lib/control/src/: display_ssd1306.c
lib/network/: CMakeLists.txt
lib/network/src/: mesh_net.c
src/: CMakeLists.txt  main.c
src/rx/: main.c
src/tx/: main.c
